fix example images wrapping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -119,7 +119,7 @@ mat-toolbar {
 }
 
 .example-inputs {
-  height: 120px;
+  min-height: 120px;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
